# business-credit-system-enhancement-case-study

./: .gitignore  README.md  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pytest.ini
jane-street-puzzle-solutions/: AGENTS.md  CONTRIBUTING.md  README.en.md  README.md  README.zh-CN.md  pyproject.toml
jane-street-puzzle-solutions/data/: puzzles.json
jane-street-puzzle-solutions/puzzles/2022/2022-06-block-party-4/: README.en.md  README.md  README.zh-CN.md  metadata.json  notes.md  solution.py
jane-street-puzzle-solutions/puzzles/2022/2022-07-andy-s-morning-stroll/: README.en.md  README.md  README.zh-CN.md  metadata.json  notes.md  solution.py  test_solution.py
jane-street-puzzle-solutions/puzzles/2022/2022-08-new-york-minute/: README.en.md  README.md  README.zh-CN.md  metadata.json  notes.md  solution.py
jane-street-puzzle-solutions/puzzles/2022/2022-09-pair-dance-2/: README.en.md  README.md  README.zh-CN.md  metadata.json  notes.md  solution.py
jane-street-puzzle-solutions/puzzles/2022/2022-10-the-marshy-mess/: README.en.md  README.md  README.zh-CN.md  metadata.json  notes.md  (+1 more)
jane-street-puzzle-solutions/scripts/: archive_utils.py  build_index.py  check_links.py  fetch_archive.py  repository_report.py  scaffold_puzzles.py  validate_bilingual_content.py  validate_metadata.py
jane-street-puzzle-solutions/templates/: puzzle-landing-template.md  puzzle-template.en.md  puzzle-template.zh-CN.md
jane-street-puzzle-solutions/tests/: conftest.py  test_archive.py  test_bilingual_content.py  test_index.py  test_links.py  test_metadata.py
(+325 files in other folders)
