[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jane-street-puzzle-solutions"
version = "0.1.0"
description = "Independent bilingual Jane Street puzzle research archive"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests", "puzzles"]
python_files = ["test_*.py"]
addopts = "-q --import-mode=importlib"
